src_old/objects/ApexRule__c.object
<CustomObject>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HardStop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Stop ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overridable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overridable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Apex Rule</label>
    <nameField>
        <label>Apex Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>